# templates

python/: README.md  cookiecutter.json
python/{{ cookiecutter.project_slug }}/: .editorconfig  .gitattributes  .gitignore  MANIFEST.in  README.md  azure-pipeline.yaml  poetry.toml.sample  pyproject.toml
python/{{ cookiecutter.project_slug }}/src/{{ cookiecutter.package_name }}/: __main__.py  file_from_package.py  version.py
python/{{ cookiecutter.project_slug }}/tests/: test_add_numbers.py  test_e2e.py
python/{{ cookiecutter.project_slug }}/tools/: create-manual-copy-package.sh  create-offline-package.sh
