[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "{{ cookiecutter.project_slug }}"
requires-python = "{{ cookiecutter.python_version_constraint }}"
dynamic = ["version"]
authors = [{ name = "{{ cookiecutter.project_author }}" }]
description = "{{ cookiecutter.project_short_description }}"
license = "LicenseRef-Proprietary"
readme = "README.md"
dependencies = [
    "polars>=1.24",
    # "openpyxl",
    # "pandas",
    # "pyyaml",
    # "azure-core",
    # "azure-identity",
    # "azure-storage-blob"
]

[tool.poetry]
requires-poetry = ">=2.0"
packages = [
    { include = "{{ cookiecutter.package_name }}", from = "src" }
]
include = [
    { path = "src/{{ cookiecutter.package_name }}/VERSION", format = ["sdist", "wheel"] }
]
version = "0.0.0" # base version, dynamically set by plugin

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
flake8-pyproject = "*"
isort = "*"
mypy = "*"
pytest = "*"
# pytest-cov = "*"
# pytest-repeat = "*"
# types-pyyaml = "*"
# types-openpyxl = "*"
# pandas-stubs = "*"

#############################
# External tool configuration
#############################

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry-dynamic-versioning.substitution]
patterns = [
    "()0.0.0-non-production-ready()"  # 2 empty capturing group because we don"t want to keep anything around the pattern
]
files = [
    "*/VERSION"
]
folders = [
    { path = "src" }
]

[tool.poetry-dynamic-versioning.files."src/{{ cookiecutter.package_name }}/VERSION"]
persistent-substitution = true
initial-content = "0.0.0-non-production-ready"

[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
    "--showlocals",
    "--quiet",
    "-r A",
    "--import-mode=importlib"
]
testpaths = ["tests"]
markers = [
    "flaky: Possibly needs a few runs to be passing the test.",
    "slow: Slow test"
]

[tool.pydeps]
include_missing = true
reverse = true
exclude = [
    "__future__",
    "collections",
    "os",
    "pandas",
    "polars",
    "pyodbc",
    "re",
    "sys",
    "yaml"
]

[tool.flake8]
max-line-length = 200
extend-ignore = [
    "E203", # Whitespace before ":"
    "E701"  # Multiple statements on one line
]

[tool.mypy]
files = ["src/"]
check_untyped_defs = true
pretty = true
strict = true

allow_untyped_calls = false
# disallow_any_expr = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
enable_error_code = "redundant-expr, truthy-bool, truthy-iterable, unused-awaitable"
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
strict_equality = true
strict_optional = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

